// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput should render NumericInput with all available props 1`] = `
<div
  className="numeric-input numeric-input--error numeric-input--disabled numeric-test"
>
  <input
    disabled={true}
    max={100}
    min={1}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <button
    aria-label="Increment value"
    className="numeric-input__increment"
    disabled={true}
    onClick={[Function]}
    tabIndex="-1"
    type="button"
  />
  <button
    aria-label="Decrement value"
    className="numeric-input__decrement"
    disabled={true}
    onClick={[Function]}
    tabIndex="-1"
    type="button"
  />
</div>
`;

exports[`NumericInput should render NumericInput with required props 1`] = `
<div
  className="numeric-input"
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="1"
  />
  <button
    aria-label="Increment value"
    className="numeric-input__increment"
    disabled={false}
    onClick={[Function]}
    tabIndex="-1"
    type="button"
  />
  <button
    aria-label="Decrement value"
    className="numeric-input__decrement"
    disabled={false}
    onClick={[Function]}
    tabIndex="-1"
    type="button"
  />
</div>
`;
